--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Protfoilo</title>
-    <link rel="stylesheet" href="/Css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="/image/fiv (2).png">
 
 </head>
@@ -231,7 +231,8 @@ I love exploring AI tools, working on creative ideas, and improving myself every
             <p style="text-align:center;">© 2025 Goutham — Made with ❤</p>
         </div>
     </footer>
-    <Script src="/JavaScript/script.js"></Script>
+    <Script src="script.js"></Script>
 </body>
+
 
 </html>
