--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
                     make an impact.</p><br>
 
                 <div class="network">
-                    <a href="https://www.linkedin.com/in/goutham-u-s"><img src="/image/id/linkedin.png" alt="linkedin"
+                    <a href="https://www.linkedin.com/in/goutham-u-s"><img src="linkedin.png" alt="linkedin"
                             title="linkedin"></a>
-                    <a href="https://github.com/goutham7888"><img src="/image/id/github.png" alt="github"
+                    <a href="https://github.com/goutham7888"><img src="github.png" alt="github"
                             title="github"></a>
-                    <a href="gouthamus06@gmail.com"><img src="/image/id/gmail.png" alt="email" title="gmail"></a>
-                    <a href="https://www.instagram.com/goutham.u.s/#"><img src="/image/id/instagram.png" alt="instagram"
+                    <a href="gouthamus06@gmail.com"><img src="gmail.png" alt="email" title="gmail"></a>
+                    <a href="https://www.instagram.com/goutham.u.s/#"><img src="instagram.png" alt="instagram"
                             title="instagram"></a>
                 </div>
                 <br>
@@ -56,7 +56,7 @@
                 </div>
             </div>
             <div class="left">
-                <img src="/image/Goutham.png" alt="Profile image">
+                <img src="Goutham.png" alt="Profile image">
             </div>
         </div>
 
@@ -70,32 +70,32 @@
         <div class="container">
             <div class="skills">
 
-                <img src="/image/skill/java.png" alt="Java">
+                <img src="java.png" alt="Java">
 
 
 
-                <img src="/image/skill/html-5.png" alt="html">
+                <img src="html-5.png" alt="html">
 
 
 
-                <img src="/image/skill/css-3.png" alt="css">
+                <img src="css-3.png" alt="css">
 
 
 
-                <img src="/image/skill/js.png" alt="JavaScript">
+                <img src="js.png" alt="JavaScript">
 
 
 
-                <img src="/image/skill/database.png" alt="Sql">
+                <img src="database.png" alt="Sql">
 
 
 
-                <img src="/image/skill/react (2).png" alt="Spring">
+                <img src="react (2).png" alt="Spring">
 
 
 
-                <img src="/image/skill/react (1).png" alt="react">
-                <img src="/image/skill/word.png" alt="word">
+                <img src="react (1).png" alt="react">
+                <img src="word.png" alt="word">
 
 
             </div>
@@ -112,9 +112,9 @@
                     <div class="carousel">
                         <div class="slides" id="slides1">
                             <!-- Replace src with your own image paths/URLs -->
-                            <img src="/image/project1/Screenshot 2025-05-25 215539.png" alt="Slide 1">
-                            <img src="/image/project1/Screenshot 2025-05-25 215557.png" alt="Slide 2">
-                            <img src="/image/project1/Screenshot 2025-05-25 215624.png" alt="Slide 3">
+                            <img src="Screenshot 2025-05-25 215539.png" alt="Slide 1">
+                            <img src="Screenshot 2025-05-25 215557.png" alt="Slide 2">
+                            <img src="Screenshot 2025-05-25 215624.png" alt="Slide 3">
                         </div>
 
                         <button class="btn prev" id="prevBtn">&#10094;</button>
@@ -236,3 +236,4 @@ I love exploring AI tools, working on creative ideas, and improving myself every
 
 
 </html>
+
