--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <hr><br>
         </div>
         <div class="aboutme" id="aboutpart">
-            <pre>Hello! I'm Goutham, a passionate and self-motivated developer currently pursuing my degree at Sri Siddhartha School of Engineering.I have a strong interest in Java development, Android development, Python, data analysis, and cybersecurity. I enjoy learning new technologies building real-world projects, and constantly improving my skills through hands-on practice.
+            <pre>Hello! I'm Goutham, a passionate and self-motivated developer and I am Camputer Science Graduate from Sri Siddhartha School of Engineering. I have a strong interest in Java development, Android development, Python, data analysis, and cybersecurity. I enjoy learning new technologies building real-world projects, and constantly improving my skills through hands-on practice.
 
 I’ve worked on projects like secure file transfer systems, chatbots, AI assistants, and multiple web and Java applications. I’m currently learning Android Studio, Firebase, and advanced Java to build scalable apps—including a location-based safety app.
 
@@ -236,4 +236,5 @@ I love exploring AI tools, working on creative ideas, and improving myself every
 
 
 </html>
+
 
