--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <h3 id="typing">Java Devoloper</h3>
                 </div>
                 <p>A passionate Java developer and web developer, I enjoy working with Java, Spring Boot, and modern web
-                    technologies to create secure, scalable projects,I love solving real-world problems through code and
+                    technologies to create secure, scalable projects I love solving real-world problems through code and
                     continuously improving my skills. I’m always eager to take on new challenges and build products that
                     make an impact.</p><br>
 
@@ -44,7 +44,7 @@
                             title="linkedin"></a>
                     <a href="https://github.com/goutham7888"><img src="github.png" alt="github"
                             title="github"></a>
-                    <a href="gouthamus06@gmail.com"><img src="gmail.png" alt="email" title="gmail"></a>
+                    <a href="mailto:gouthamus06@gmail.com"><img src="gmail.png" alt="email" title="gmail"></a>
                     <a href="https://www.instagram.com/goutham.u.s/#"><img src="instagram.png" alt="instagram"
                             title="instagram"></a>
                 </div>
@@ -236,5 +236,6 @@ I love exploring AI tools, working on creative ideas, and improving myself every
 
 
 </html>
+
 
 
