--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
                     <div class="carousel">
                         <div class="slides" id="slides3">
                             <!-- Replace src with your own image paths/URLs -->
-                            <img src="https://picsum.photos/400/250?random=1" alt="Slide 1">
-                            <img src="https://picsum.photos/400/250?random=2" alt="Slide 2">
-                            <img src="https://picsum.photos/400/250?random=3" alt="Slide 3">
+                            <img src="portfolio_page1" alt="Slide 1">
+                            <img src="page2" alt="Slide 2">
+                            <img src="page3" alt="Slide 3">
                         </div>
 
                         <button class="btn prev" id="prevBtn">&#10094;</button>
@@ -187,42 +187,11 @@ I love exploring AI tools, working on creative ideas, and improving myself every
         <div class="body">
             <div class="contact-wrapper">
                 <div class="contact-title">
-                    <h2>Contact Me</h2>
-                    <p>Have a project, idea, or just want to say hi? Drop a message.</p>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSe-XcuAo0bGJdBG6jrrcQAmnFt7B20GcKm3uuhiYnqEkPP9rA/viewform?usp=dialog"><button id="contbtn">Contact Me</button></a> 
+                    <p>Have a Project, Idea Just Click This Button Above And Drop a Message.</p>
                 </div>
 
-                <form id="contactForm" novalidate>
-                    <div class="form-row">
-                        <div class="form-group">
-                            <label for="name">Your Name*</label>
-                            <input type="text" id="name" name="name" placeholder="Enter your name" />
-                            <span class="error-text" id="nameError">Please enter your name.</span>
-                        </div>
-
-                        <div class="form-group">
-                            <label for="email">Email*</label>
-                            <input type="email" id="email" name="email" placeholder="Enter your email" />
-                            <span class="error-text" id="emailError">Please enter a valid email.</span>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="subject">Subject*</label>
-                        <input type="text" id="subject" name="subject" placeholder="What is this about?" />
-                        <span class="error-text" id="subjectError">Please enter a subject.</span>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="message">Message*</label>
-                        <textarea id="message" name="message" placeholder="Write your message here..."></textarea>
-                        <span class="error-text" id="messageError">Please enter a message.</span>
-                    </div>
-
-                    <button type="submit" class="btn-submit">Send Message</button>
-                    <div class="success-message" id="successMessage">
-                        ✅ Thank you! Your message has been “sent”. (You can connect real email later.)
-                    </div>
-                </form>
+               
             </div>
         </div>
     </section>
@@ -236,6 +205,7 @@ I love exploring AI tools, working on creative ideas, and improving myself every
 
 
 </html>
+
 
 
 
