--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <p>Project Name: TransCrypt</p>
 
                     </div>
-                    <button id="btn1">View Project</button>
+                  <a href="g.html" ><button id="btn1">View Project</button> </a>
 
                 </div>
                 <div class="projectcard">
@@ -205,6 +205,7 @@ I love exploring AI tools, working on creative ideas, and improving myself every
 
 
 </html>
+
 
 
 
