--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
                     <div class="carousel">
                         <div class="slides" id="slides3">
                             <!-- Replace src with your own image paths/URLs -->
-                            <img src="portfolio_page1" alt="Slide 1">
-                            <img src="page2" alt="Slide 2">
-                            <img src="page3" alt="Slide 3">
+                            <img src="portfolio_page1.png" alt="Slide 1">
+                            <img src="page2.png" alt="Slide 2">
+                            <img src="page3.png" alt="Slide 3">
                         </div>
 
                         <button class="btn prev" id="prevBtn">&#10094;</button>
@@ -205,6 +205,7 @@ I love exploring AI tools, working on creative ideas, and improving myself every
 
 
 </html>
+
 
 
 
