--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a href="#homepart">Home</a>
                     <a href="#aboutpart">About</a>
                     <a href="#projectpart">Project</a>
-                    <a href="#skillpart" style="margin-right: 20px;">Contact</a>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSe-XcuAo0bGJdBG6jrrcQAmnFt7B20GcKm3uuhiYnqEkPP9rA/viewform?usp=dialog" style="margin-right: 20px;">Contact</a>
                 </div>
             </div>
         </div>
@@ -146,7 +146,7 @@
                         <p>Project Name: AI Chat BOT</p>
 
                     </div>
-                    <button id="btn1">View Project</button>
+                  <a href="g.html" ><button id="btn1">View Project</button> </a>
 
                 </div>
                 <div class="projectcard">
@@ -167,7 +167,7 @@
                         <p>Project Name: Portfolio Website</p>
 
                     </div>
-                    <button id="btn1">View Project</button>
+                    <a href="g.html" ><button id="btn1">View Project</button> </a>
                 </div>
             </div>
         </div>
@@ -187,8 +187,9 @@ I love exploring AI tools, working on creative ideas, and improving myself every
         <div class="body">
             <div class="contact-wrapper">
                 <div class="contact-title">
+                     <p>Have a Project Idea Just Click This Button Below And Drop a Message.</p>
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSe-XcuAo0bGJdBG6jrrcQAmnFt7B20GcKm3uuhiYnqEkPP9rA/viewform?usp=dialog"><button id="contbtn">Contact Me</button></a> 
-                    <p>Have a Project, Idea Just Click This Button Above And Drop a Message.</p>
+                   
                 </div>
 
                
@@ -205,6 +206,7 @@ I love exploring AI tools, working on creative ideas, and improving myself every
 
 
 </html>
+
 
 
 
