--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Protfoilo</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="/image/fiv (2).png">
+    <link rel="icon" type="image/png" href="fiv (2).png">
 
 </head>
 
@@ -206,6 +206,7 @@ I love exploring AI tools, working on creative ideas, and improving myself every
 
 
 </html>
+
 
 
 
