--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
                     <div class="carousel">
                         <div class="slides" id="slides1">
                             <!-- Replace src with your own image paths/URLs -->
-                            <img src="Screenshot 2025-05-25 215539.png" alt="Slide 1">
-                            <img src="Screenshot 2025-05-25 215557.png" alt="Slide 2">
-                            <img src="Screenshot 2025-05-25 215624.png" alt="Slide 3">
+                            <img src="post1.png" alt="Slide 1">
+                            <img src="post2.png" alt="Slide 2">
+                            <img src="post3.png" alt="Slide 3">
                         </div>
 
                         <button class="btn prev" id="prevBtn">&#10094;</button>
@@ -206,6 +206,7 @@ I love exploring AI tools, working on creative ideas, and improving myself every
 
 
 </html>
+
 
 
 
