--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <p>Project Name: TransCrypt</p>
 
                     </div>
-                  <a href="g.html" ><button id="btn1">View Project</button> </a>
+               <button id="btn1" onclick="openProject('transcrypt')">View Project</button>
 
                 </div>
                 <div class="projectcard">
@@ -146,7 +146,7 @@
                         <p>Project Name: AI Chat BOT</p>
 
                     </div>
-                  <a href="g.html" ><button id="btn1">View Project</button> </a>
+                  <button id="btn1" onclick="openProject('chatbot')">View Project</button>
 
                 </div>
                 <div class="projectcard">
@@ -167,7 +167,7 @@
                         <p>Project Name: Portfolio Website</p>
 
                     </div>
-                    <a href="g.html" ><button id="btn1">View Project</button> </a>
+                   <button id="btn1"<button onclick="openProject('aiassistant')">View Project</button>
                 </div>
             </div>
         </div>
@@ -206,6 +206,7 @@ I love exploring AI tools, working on creative ideas, and improving myself every
 
 
 </html>
+
 
 
 
