--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
                     <div class="carousel">
                         <div class="slides" id="slides2">
                             <!-- Replace src with your own image paths/URLs -->
-                            <img src="https://picsum.photos/400/250?random=1" alt="Slide 1">
+                            <img src="chatbot.jpg" alt="Slide 1">
                             <img src="https://picsum.photos/400/250?random=2" alt="Slide 2">
-                            <img src="https://picsum.photos/400/250?random=3" alt="Slide 3">
+                            <img src="chatbot.jpg"  alt="Slide 3">
                         </div>
 
                         <button class="btn prev" id="prevBtn">&#10094;</button>
@@ -167,7 +167,7 @@
                         <p>Project Name: Portfolio Website</p>
 
                     </div>
-                   <button id="btn1"<button onclick="openProject('aiassistant')">View Project</button>
+                   <button id="btn1" onclick="openProject('aiassistant')">View Project</button>
                 </div>
             </div>
         </div>
@@ -206,6 +206,7 @@ I love exploring AI tools, working on creative ideas, and improving myself every
 
 
 </html>
+
 
 
 
