--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <div class="slides" id="slides2">
                             <!-- Replace src with your own image paths/URLs -->
                             <img src="chatbot.jpg" alt="Slide 1">
-                            <img src="https://picsum.photos/400/250?random=2" alt="Slide 2">
+                            <img src="chatbot.jpg" alt="Slide 2">
                             <img src="chatbot.jpg"  alt="Slide 3">
                         </div>
 
@@ -206,6 +206,7 @@ I love exploring AI tools, working on creative ideas, and improving myself every
 
 
 </html>
+
 
 
 
