--- a/project.html
+++ b/project.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="project.css">
 </head>
 <body>
- <a href="/Html/index.html" class="back-btn">← Back to Portfolio</a>
+ <a href="index.html" class="back-btn">← Back to Portfolio</a>
 <div class="project-container">
     
     <img id="projectImage">
@@ -24,3 +24,4 @@
 <script src="project.js"></script>
 </body>
 </html>
+
