--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             title="linkedin"></a>
                     <a href="https://github.com/goutham7888"><img src="github.png" alt="github"
                             title="github"></a>
-                    <a href="mailto:gouthamus06@gmail.com"><img src="gmail.png" alt="email" title="gmail"></a>
+                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=gouthamus06@gmail.com"><img src="gmail.png" alt="email" title="gouthamus06@gmail.com"></a>
                     <a href="https://www.instagram.com/goutham.u.s/#"><img src="instagram.png" alt="instagram"
                             title="instagram"></a>
                 </div>
@@ -206,6 +206,7 @@ I love exploring AI tools, working on creative ideas, and improving myself every
 
 
 </html>
+
 
 
 
