--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
                 <br>
                 <div>
-                    <a href="/GOUTHAM's java IBM resume.pdf" download>
+                    <a href="/GouthamResume.pdf" download>
                         <button id="resumebutton">Download My Resume </button>
                     </a>
                 </div>
@@ -206,6 +206,7 @@ I love exploring AI tools, working on creative ideas, and improving myself every
 
 
 </html>
+
 
 
 
